Fix text-align for tooltip

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ video {
     padding: 36px 44px;
     font-size: 35px;
     font-weight: normal;
+    text-align: start;
     line-height: 35px;
     letter-spacing: normal;
     word-spacing: normal;
